# rag-builder

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  config_schemas.py  db.py  errors.py  main.py  models.py
backend/app/auth/: deps.py  routes.py  security.py  seed.py
backend/app/rag/: __init__.py  chunker.py  embedder.py  generator.py  loader.py  pipeline.py  retriever.py  scheduler.py  store.py  watcher.py  web_loader.py
backend/app/routes/: pipeline.py  playground.py  settings.py  sources.py  web_sources.py
backend/tests/: conftest.py  test_phase1_core.py  test_phase2_auth.py  test_phase3_config.py  test_phase4_ingestion.py  test_phase5_web.py  test_phase6_retrieval.py  test_phase7_autorefresh.py
docs/: README_SAMPLE.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/pipeline/: page.tsx
frontend/app/(dashboard)/playground/: page.tsx
frontend/app/(dashboard)/retrieval/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/(dashboard)/sources/: page.tsx
frontend/app/(dashboard)/vectorstore/: page.tsx
frontend/app/(dashboard)/web-sources/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: auth-provider.tsx  config-form.tsx  nav-items.ts  nav-mobile.tsx  nav-sidebar.tsx  nav-topbar.tsx  page-placeholder.tsx
frontend/components/ui/: badge.tsx  select.tsx  tabs.tsx
frontend/lib/: api.ts  auth.ts  config.ts  sse.ts  token-store.ts  use-config-section.ts
