[project]
name = "rag-builder-backend"
version = "0.1.0"
description = "RAG System Builder — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework + ASGI server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Config + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    # Persistence (config store)
    "sqlmodel>=0.0.22",
    # Auth (JWT + bcrypt)
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    # Vector stores (swappable backends)
    "chromadb>=0.5.0",
    "qdrant-client>=1.12.0",
    # Embeddings (local + API)
    "sentence-transformers>=3.2.0",
    "openai>=1.51.0",
    "cohere>=5.11.0",
    # LLM providers
    "anthropic>=0.37.0",
    # Local file ingestion / parsing
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    # Web ingestion
    "httpx>=0.27.2",
    "trafilatura>=1.12.0",
    # File watching + scheduled re-crawl
    "watchdog>=5.0.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
# Heavier / optional crawl path (Playwright-backed). Kept optional so the base
# image stays slim; Phase 5 will wire system deps into the Dockerfile.
crawl = [
    "crawl4ai>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
